fix: use MariaDB so that tests work by default on M1 Apple systems

--- a/samples/mysql-schema/src/main/resources/application.properties
+++ b/samples/mysql-schema/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.operator-sdk.crd.apply=true
 quarkus.container-image.builder=jib
 quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.commons.lang3.RandomStringUtils
 
 quarkus.datasource.username=root
+quarkus.datasource.devservices.image-name=mariadb:10.7
